# finance-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: AUDIT_REPORT.md  AWESOME_SUBMISSION.md  BLOG_POST.md  LINKEDIN_POSTS.md  PUBLISHING.md  RECORDING.md  TWITTER_THREAD.md  demo.tape
src/finance_mcp/: __init__.py  cache.py  models.py  provider.py  server.py
src/finance_mcp/tools/: compare.py  fundamentals.py  history.py  indicators.py  news.py  quote.py
tests/: test_compare.py  test_fundamentals.py  test_history.py  test_indicators.py  test_negative.py  test_news.py  test_quote.py
